2005-10-25  Jonathan Pryor <jonpryor@vt.edu>

	* Stdlib.cs, Syscall.cs: Filenames need to be marshaled through the 
	  FileNameMarshaler, which will encode/decode filenames with UnixEncoder.
	* UnixEncoding.cs: Added (copied from
	  ../../corlib/System.Text/UTF8Encoding.cs); a hack to permit handling of 
	  arbitrarily encoded filenames.  It attempts to decode a byte[] array as 
	  UTF-8, and if the decode fails it prefixes each byte with 
	  UnixEncoding.EscapeByte (\uFFFF).
	* UnixMarshal.cs: Use UnixEncoding as the default encoding, and special-case
	  UnixEncoding to use Stdlib.strlen() for native string lengths.

2005-10-21  Jonathan Pryor <jonpryor@vt.edu>

	* FileAccessPattern.cs: Added
	* UnixFile.cs, UnixStream.cs: Deprecate all the Advise* methods (lots!)
	  and replace with 6 methods which take a FileAccessPattern enum.

2005-10-19  Jonathan Pryor <jonpryor@vt.edu>

	* FileAccessPermissions.cs, FileSpecialAttributes.cs, FileTypes.cs: Added.
	* UnixFileSystemInfo.cs, UnixStream.cs: Replace the old Permission property
	  with 4 new properties: Protection (for the Native.FilePermissions value),
	  FileAccessPermissions (for rwxrwxrwx info), FileSpecialAttributes (for
	  set-user-id, set-group-id, sticky), and FileTypes (directory, socket...).
	  The new enumeration types have nicer CLS-compliant names.

2005-10-17  Jonathan Pryor <jonpryor@vt.edu>

	* UnixMarshal.cs: Fix GetIntXxBufferLength to require fewer
	  Marshal.ReadIntXx() calls; Fix PtrToString so that
	  ``"foo" == PtrToString (StringToAlloc("foo",enc),enc)'' is true for
	  "random" encodings.

2005-10-17  Jonathan Pryor <jonpryor@vt.edu>

	* UnixFileSystemInfo.cs: Add OwnerUserId and OwnerGroupId properties.

2005-10-17  Jonathan Pryor <jonpryor@vt.edu>

	* UnixDriveInfo.cs, UnixEnvironment.cs, UnixFile.cs, UnixFileSystemInfo.cs, 
	  UnixGroup.cs, UnixStream.cs, UnixUser.cs: Don't use SetLastError(), since
	  it's use is (1) incorrect, and (2) will be going away with the move to